--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Let's dev!</h1>
-    <p>Este luga rem breve vai estar cheio de informação</p>
-    <p>Até lá vou me divertir um pouco</p>
+    <h3>Este luga rem breve vai estar cheio de informação</h3>
+    <h3>Até lá vou me divertir um pouco</h3>
 </body>
