--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
+
 <head>
     <title> Madson Felix </title>
     <link rel="Stylesheet" type="text/css" href="CSS/index.css">
 </head>
+
 <body>
-    <h1>Let's dev!</h1>
-    <h3>Este luga rem breve vai estar cheio de informação</h3>
-    <h3>Até lá vou me divertir um pouco</h3>
+    <section ><div id="cabec">
+        <h1>Bem vindo ao meu portfolio!</h1>
+    </div></section>
+    <section id="info">
+        <h3>Este luga rem breve vai estar cheio de informação</h3>
+        <h3>Até lá vou me divertir um pouco</h3>
+    </section>
 </body>
