--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-    <section ><div id="cabec">
+    <section id="top"><div id="cabec">
         <h1>Bem vindo ao meu portfolio!</h1>
     </div></section>
     <section id="info">
-        <h3>Este luga rem breve vai estar cheio de informação</h3>
-        <h3>Até lá vou me divertir um pouco</h3>
+       <div id="ball"> Este luga rem breve vai estar cheio de informação</div>
+       <div id="ballon"> Até lá vou me divertir um pouco</div>
     </section>
 </body>
