--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <section id="top"><div id="cabec">
-        <h1>Bem vindo ao meu portfolio!</h1>
+        <h1 style="color: red";>Bem vindo ao meu portfolio!</h1>
     </div></section>
     <section id="info">
        <div id="ball"> Este luga rem breve vai estar cheio de informação</div>
