--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title> Madson Felix </title>
     <link rel="Stylesheet" type="text/css" href="CSS/index.css">
+    <script></script>
 </head>
-
 <body>
     <section id="top"><div id="cabec">
         <h1 style="color: red";>Bem vindo ao meu portfolio!</h1>
