--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 
 <head>
     <title> Madson Felix </title>
+
     <link rel="Stylesheet" type="text/css" href="CSS/index.css">
-    <script></script>
+    <script type="text/javascript" href="script/index.js"></script>
 </head>
 <body>
-    <section id="top"><div id="cabec">
-        <h1 style="color: red";>Bem vindo ao meu portfolio!</h1>
-    </div></section>
-    <section id="info">
-       <div id="ball"> Este luga rem breve vai estar cheio de informação</div>
-       <div id="ballon"> Até lá vou me divertir um pouco</div>
-    </section>
+    <header id="header">
+        <div class="logo">
+            <img src="logo\mflogo.png" alt="Logo Madson Felix">
+        </div>
+        <nav class="menu">
+            <ul>
+                <li><a href="#Sobre">Sobre</a></li>
+                <li><a href="#Skills">Skills</a></li>
+                <li><a href="#Projetos">Projetos</a></li>
+                <li><a href="#Contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>     
 </body>
