Cor, header, menu

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title> Madson Felix </title>
 
     <link rel="Stylesheet" type="text/css" href="CSS/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <script type="text/javascript" href="script/index.js"></script>
 </head>
 <body>
@@ -12,7 +13,7 @@
             <img src="logo\mflogo.png" alt="Logo Madson Felix">
         </div>
         <nav class="menu">
-            <ul>
+            <ul class="menuUl">
                 <li><a href="#Sobre">Sobre</a></li>
                 <li><a href="#Skills">Skills</a></li>
                 <li><a href="#Projetos">Projetos</a></li>
