--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
-<!DOCTYPE html>
+<!Doctype html>
 
-<head>
-    <title> Madson Felix </title>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <title>Uma poesia</title>
+        <link rel="stylesheet" rel="stylesheet" href="css/index.css">
+    </head>
+       
+    <body>
+        <section id="header">
+            <nav id="menu">
+                <button id="menupoe" onclick="listaPoesias()">POESIAS</button>
+                <button id="menuaut" onclick="listaAutores()">AUTORES</button>
+                <button id="menurand" onclick="random()">ALEATÓRIO</button>
+                <button id="menulogin" onclick="login()">LOGIN</button>
+            </nav>
+            <div id="dtitulo">
+                <p id="titulo">*POSTA POESIA*</p>
+            </div>
+        </section>
+        <section id="cadastroOuLogin" style="display: none;">
+            <button id="bcadastrar" onclick="loginOuCadastro(0)">CADASTRE-SE</button>
+            <button id="blogar" onclick="loginOuCadastro(1)">ENTRAR</button>
+        </section>        
+        <section id="lista" style="display:none">
+                <p style="font-size: 80px; color:blue">UMA LISTA DE POESIA SERÁ MOSTRADA</p>
+                <input id="retornButton" type="button" value="RETORNAR" onclick="zerar()">                
+        </section>
 
-    <link rel="Stylesheet" type="text/css" href="CSS/index.css">
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
-    <script type="text/javascript" href="script/index.js"></script>
-</head>
-<body>
-    <header id="header">
-        <div class="logo">
-            <img src="logo\mflogo.png" alt="Logo Madson Felix">
-        </div>
-        <nav class="menu">
-            <ul class="menuUl">
-                <li><a href="#Sobre">Sobre</a></li>
-                <li><a href="#Skills">Skills</a></li>
-                <li><a href="#Projetos">Projetos</a></li>
-                <li><a href="#Contato">Contato</a></li>
-            </ul>
-        </nav>
-    </header>     
-</body>
+        <script type="text/javascript" src="scripts\index.js"></script>
+    </body>
+</html>
