--- a/contatos.html
+++ b/contatos.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Meus contatos</title>
+        <link rel="stylesheet" href="style/style.css">
     </head>
     <body>
         <h1>Meus Contatos:</h1>
