--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Madson Felix</title>
+        <link rel="stylesheet" href="style/style.css">
     </head>
     <body>
         <table cellspacing="20">
             <tr>
-                <td> <img src="\midia\circle-cropped-profile.png" alt="Madson's profile picture" height="200px" width="250px"></td>
+                <td> <img src="\midia\circle-cropped-profile.png" alt="Madson's profile picture"></td>
                 <td><h1>João Madson F. B. de Carvalho</h1>
                     <p><em>Desenvolvedor de softwares e sistemas.</em></p>
                     <p>Formando de Engenharia da computação desde 2015 na Universidade Mauricio de Nassau - Recife, natural de Exu-PE</p></td>
